# phrase-reference-builder

./: README.md  requirements.txt  setup.cfg
src/phrase_reference_builder/: __init__.py  build.py  pronouns.py  types.py
