[metadata]
name = phrase-reference-builder
version = 1.0.0
author = Applejuice
description = Package that transforms phrase templates with references into phrases with its respective pronouns
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    pydantic
    emoji

[options.packages.find]
where = src